# Gaussian_Blur

./: CMakeLists.txt  README.md  build.ps1  build_linux.sh  clean.ps1  clean_linux.sh  resource.qrc  run.ps1  run_linux.sh
resources/: about.txt
src/: bluredimage.cpp  bluredimage.h  common_utils.cpp  common_utils.h  mainwindow.cpp  mainwindow.h  modaldialog.cpp  modaldialog.h  onedkernel.cpp  onedkernel.h  progressbarblur.cpp  progressbarblur.h  radiuscontrolpanel.cpp  radiuscontrolpanel.h
